...
    @IBOutlet weak var emailLabel: UILabel!
    var user : User!
    
    
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Profile"
        getUser()
    }
    
    
    @IBAction func logOut(_ sender: UIButton) {
        
...
